--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   dashboard:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    image: changchikai/soundphoto_dashboard:v1.0
     ports:
       - "8501:8501"
     restart: always
@@ -16,7 +14,6 @@ services:
       - app-network
     env_file:
       - .env
-  
 networks:
   app-network:
     driver: bridge
